Thu Oct 13 19:41:32 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (copy_stream_body): use IO to write to copy to duplex IO.
	  http://twitter.com/knu/status/786505317974585344

Thu Oct 13 17:05:57 2016  Dwain Faithfull  <dwfaithfull@gmail.com>

	* hash.c (rb_hash_compact, rb_hash_compact_bang): Removes nil
	  values from the original hash, to port Active Support behavior.
	  [Feature #11818]

Thu Oct 13 11:35:33 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_sort_bang, rb_ary_sort, rb_ary_sort_by_bang):
	  [DOC] describe that sort may not be stable.

	* enum.c (enum_sort, enum_sort_by): ditto.

Thu Oct 13 11:31:40 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/rexml/xpath/test_text.rb (test_ancestors): Array#sort may
	  not be stable.  [ruby-core:76088] [Bug #12509]

	* test/rss/test_maker_{0.9,1.0,2.0}.rb (test_items): ditto.

Thu Oct 13 10:37:31 2016  Eric Wong  <e@80x24.org>

	* doc/extension.rdoc: wording fix

Thu Oct 13 00:39:08 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_array.rb (test_sort_bang_with_freeze): make a
	  clone to copy a <=> singleton method, instead of dup.  which
	  element will be called is not predictable.
	  [ruby-core:76088] [Bug #12509]

Thu Oct 13 00:21:27 2016  Simon Soriano  <simon0191@gmail.com>

	* doc/extension.rdoc: Replace "You can defined hooked variables"
	  with "You can define hooked variables". [Fix GH-1460]

Wed Oct 12 21:05:50 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ruby.c (open_load_file): revert r56385.  it introduced incompatibility
	  about `DATA.binmode?`.

Wed Oct 12 15:24:53 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* tool/downloader.rb: Removed verification of gem certification.
	  Because signed gem is not working on rubygems ecosystem.
	* tool/gem-unpack.rb: ditto.

Tue Oct 11 22:08:24 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (prep_io): fix typo of struct member name.
	  [ruby-core:77550] [Bug #12829]
